--- a/src/components/Filters/Filter.css
+++ b/src/components/Filters/Filter.css
@@ -1,26 +1,32 @@
 label {
   font-weight: bold;
-  color: rgb(211, 209, 209);
+  color: #f9bf1e;
+  padding: 10px;
 }
 
 .filters-container {
   display: flex;
+  width: 90%;
+  margin: 0 auto;
   justify-content: center;
   gap: 10px;
+  align-items: center;
 }
 
 .status-container,
 .gender-container {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  width: 12%;
+  border: 1px solid rgb(98, 164, 171);
+  box-shadow: 0px 0px 5px 0px rgba(98, 164, 171, 0.71);
+  border-radius: 2px;
 }
 
 select {
-  appearance: none;
   background-color: #330033;
   border: none;
-  padding: 0 1em 0 0;
+  padding: 0 1em 0 1em;
   margin: 0;
   width: 100%;
   font-family: inherit;
