--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,9 @@
 .header {
   font-family: "Creepster", cursive;
   background-color: rgba(98, 164, 171, 0.2);
-  color: rgb(98, 164, 171);
+  color: var(--primary-color);
   font-size: 4rem;
-  -webkit-text-stroke: 1px #f9bf1e;
+  -webkit-text-stroke: 1px var(--secondary-color);
   width: 90%;
   border-radius: 5px;
   padding: 5px;
