--- a/src/components/characters/CharacterPage.css
+++ b/src/components/characters/CharacterPage.css
@@ -1,3 +1,5 @@
+@import "../../main.css";
+
 .pageContainer {
   display: flex;
   flex-direction: column;
@@ -12,23 +14,23 @@
 }
 .character {
   display: flex;
-  background-color: #faf9ef;
-  border: 3px solid #f9bf1e;
+  background-color: var(--card-background-color);
+  border: 3px solid var(--secondary-color);
   border-radius: 10px;
   width: 40vw;
   height: 50vh;
   margin: 10px 30px;
   justify-content: stretch;
   align-items: center;
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(255, 223, 237, 0.85);
-  box-shadow: 0px 0px 5px 0px rgba(255, 223, 237, 0.85);
+  -webkit-box-shadow: 0px 0px 5px 0px var(--box-shadow-color-two);
+  box-shadow: 0px 0px 5px 0px var(--box-shadow-color-two);
   transition: 0.5s;
 }
 
 .character:hover {
   transition: 0.5s;
-  -webkit-box-shadow: 0px 0px 10px 1px #f9bf1e;
-  box-shadow: 0px 0px 10px 1px #f9bf1e;
+  -webkit-box-shadow: 0px 0px 10px 1px var(--box-shadow-color-one);
+  box-shadow: 0px 0px 10px 1px var(--box-shadow-color-one);
 }
 
 a {
@@ -51,31 +53,31 @@ a {
 
 .info span {
   font-weight: bold;
-  color: #62a4ab;
+  color: var(--primary-color);
   transition: 3s;
   text-decoration: 3px underline;
-  text-decoration-color: #faf9ef;
+  text-decoration-color: var(--card-background-color);
 }
 
 .info span:hover {
   transition: 0.2s;
   text-decoration: 3px underline;
-  text-decoration-color: #f9bf1e;
+  text-decoration-color: var(--secondary-color);
 }
 
 .backButton {
   font-family: "Creepster", cursive;
-  background-color: aliceblue;
+  background-color: var(--card-background-color);
 
   border: none;
   border-radius: 5px;
   padding: 5px 10px;
 
   font-size: 2rem;
-  color: #62a4ab;
+  color: var(--primary-color);
   cursor: pointer;
 }
 
 .backButton:active {
-  -webkit-text-stroke: 2px #f9bf1e;
+  -webkit-text-stroke: 2px var(--secondary-color);
 }
