--- a/src/components/Card/CardStyle.css
+++ b/src/components/Card/CardStyle.css
@@ -11,20 +11,23 @@
   margin: 10px 30px;
   justify-content: stretch;
   align-items: center;
-  -webkit-box-shadow: 0px 0px 5px 0px var(--box-shadow-color-two);
-  box-shadow: 0px 0px 5px 0px var(--box-shadow-color-two);
-  transition: 0.5s;
+  box-shadow: inset 0 0 0 0 var(--box-shadow-color-two);
+  transition: ease-out 0.4s;
 }
 
 .character-card:hover {
-  -webkit-box-shadow: 0px 0px 10px 1px var(--box-shadow-color-one);
-  box-shadow: 0px 0px 10px 1px var(--box-shadow-color-one);
-  transition: 0.5s;
+  box-shadow: inset 0 0 0 250px var(--box-shadow-color-one);
+  transition: ease-out 0.4s;
 }
 
-a {
+.character-card:hover p {
+  color: whitesmoke;
+  transition: ease-out 0.4s;
+}
+.character-card p {
+  font-weight: bold;
   color: #333;
-  text-decoration: none;
+  transition: ease-out 0.4s;
 }
 
 .character-image {
@@ -39,6 +42,5 @@ a {
 }
 
 .character-info span {
-  font-weight: bold;
   color: var(--primary-color);
 }
