--- a/src/components/Page/CharacterPage.css
+++ b/src/components/Page/CharacterPage.css
@@ -65,6 +65,45 @@ a {
   text-decoration-color: var(--secondary-color);
 }
 
+.episodes-list {
+  display: flex;
+  overflow-x: scroll;
+  list-style-position: inside;
+  margin: 0 4px;
+  width: 18vw;
+  white-space: nowrap;
+}
+
+.episodes-list li {
+  margin: 0 10px 0 0;
+  padding: 4px;
+  color: var(--primary-color);
+  border-radius: 4px;
+  font-weight: bold;
+}
+
+.episodes-list::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: var(--card-background-color);
+  border-radius: 10px;
+}
+
+.episodes-list::-webkit-scrollbar {
+  height: 6px;
+  background-color: #f5f5f5;
+}
+
+.episodes-list::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.44, var(--box-shadow-color-one)),
+    color-stop(0.86, var(--box-shadow-color-two))
+  );
+}
+
 .backButton {
   font-family: "Creepster", cursive;
   background-color: var(--card-background-color);
