--- a/src/components/Card/CardStyle.css
+++ b/src/components/Card/CardStyle.css
@@ -7,7 +7,7 @@
   border: 3px solid var(--secondary-color);
   border-radius: 10px;
   width: 20vw;
-  height: 60vh;
+  min-height: 50vh;
   margin: 10px 30px;
   justify-content: stretch;
   align-items: center;
@@ -28,6 +28,8 @@
   font-weight: bold;
   color: #333;
   transition: ease-out 0.4s;
+  white-space: nowrap;
+  font-size: 12px;
 }
 
 .character-image {
