--- a/src/components/Page/CharacterPage.css
+++ b/src/components/Page/CharacterPage.css
@@ -17,7 +17,7 @@
   background-color: var(--card-background-color);
   border: 3px solid var(--secondary-color);
   border-radius: 10px;
-  width: 40vw;
+  min-width: 40vw;
   height: 50vh;
   margin: 10px 30px;
   justify-content: stretch;
