--- a/src/components/List/ListStyle.css
+++ b/src/components/List/ListStyle.css
@@ -4,3 +4,9 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.loading {
+  color: var(--secondary-color);
+  font-size: 20px;
+  font-weight: bold;
+}
